<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimens_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_15dp"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/use_v2_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_15dp"
            android:layout_marginVertical="@dimen/dimens_5dp"
            android:checked="true"
            android:text="@string/use_native_auth_v2" />

        <LinearLayout
            android:id="@+id/signed_out_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute_email_or_username" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_optional" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:text="@string/optional_signup_attributes"
                android:textStyle="bold" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute_given_name" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/given_name_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute_last_name" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_text"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signed_out_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginBottom="@dimen/dimens_15dp"
                android:accessibilityLiveRegion="polite"
                android:visibility="gone" />

            <Button
                android:id="@+id/sign_in"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/sign_up"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/reset_password"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/reset_password" />

            <Button
                android:id="@+id/sign_in_with_browser"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/sign_in_with_browser" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_30dp"
                android:text="@string/sign_in_with_social"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_in_with_google"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/google" />

            <Button
                android:id="@+id/sign_in_with_facebook"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:text="@string/facebook" />

            <Button
                android:id="@+id/sign_in_with_linkedin"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_15dp"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:text="@string/linkedin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimens_15dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:accessibilityLiveRegion="polite" />

            <TextView
                android:id="@+id/access_token_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="@dimen/dimens_5dp"
                android:text="@string/access_token_loading" />

            <Button
                android:id="@+id/call_protected_api"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/call_protected_api" />

            <Button
                android:id="@+id/sign_out"
                style="@style/ActionButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:text="@string/sign_out" />

            <TextView
                android:id="@+id/signed_in_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_15dp"
                android:accessibilityLiveRegion="polite"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
