<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_15dp"
            android:layout_marginStart="@dimen/dimens_15dp"
            android:layout_marginLeft="@dimen/dimens_15dp"
            android:gravity="start|center_horizontal"
            android:text="@string/password_required_hint_text_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:text="@string/attribute_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_text"
            style="@style/TextViewStyle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck"
                style="@style/TextInputEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create"
            android:text="@string/submit_password"
            android:layout_marginTop="@dimen/dimens_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            style="@style/ActionButtonStyle" />

    <TextView
            android:id="@+id/flow_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_15dp"
            android:accessibilityLiveRegion="polite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create" />

    <Button
            android:id="@+id/cancel_flow"
            style="@style/ActionButtonStyle"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:text="@string/cancel_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_status"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
