<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_15dp"
        android:layout_marginStart="@dimen/dimens_15dp"
        android:layout_marginLeft="@dimen/dimens_15dp"
        android:gravity="start|center_horizontal"
        android:text="@string/strong_auth_challenge_hint_text_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/challenge_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_15dp"
        android:text="@string/attribute_mfa_challenge"
        app:layout_constraintTop_toBottomOf="@id/hint_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextViewStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/challenge_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_hint"
        style="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/challenge_text"
            android:layout_width="match_parent"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck"
            style="@style/TextInputEditTextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register_challenge_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_15dp"
        android:text="@string/re_register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_layout" />

    <Button
        android:id="@+id/verify_challenge"
        android:text="@string/verify_code"
        android:layout_marginTop="@dimen/dimens_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_challenge_text"
        style="@style/ActionButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
